# RHVoice-api

./: CMakeLists.txt  README.md  main.cpp
src/domain/: tts_request.h  tts_service_interface.h
src/infrastructure/: rhvoice_synthesizer.cpp  rhvoice_synthesizer.h
src/presentation/: http_handler.cpp  http_handler.h
src/usecase/: tts_usecase.cpp  tts_usecase.h
src/utils/: temp_file.cpp  temp_file.h
